# sfizz-tui

./: .gitmodules  README.md  arturia-keylab.map  build-raspberry.sh  cross-raspi.ini  meson.build  prepare-raspberry.sh  run.sh  symlink-to-bin-path.sh
.cache/clangd/index/: jack.cpp.4F86A9035060DB1A.idx  jack.hpp.02B8AF6CD2EA9569.idx  logger.cpp.E9C27E13FF9D549F.idx  logger.hpp.D16183B1FD0A36A5.idx  main.cpp.6A1D342501D8F9E9.idx  sfizz_client.hpp.9EDE83D3A601DB28.idx  sfizz_engine.cpp.E125B9B907869868.idx  sfizz_engine.hpp.61CDB45FC0D9827F.idx  tui.cpp.C9C0979F92A59B44.idx  tui.hpp.D139BC5CDA5D3575.idx
scripts/: scan_midi_gen_maps.py  sfizz-tui-aconnect.sh  symlink-to-bin-path.sh  udev-register.sh
src/: jack.cpp  jack.hpp  logger.hpp  main.cpp  midi_parser.cpp  midi_parser.hpp  sfizz_client.cpp  sfizz_client.hpp  sfizz_client_stub.hpp  sfizz_engine.cpp  sfizz_engine.hpp  sfz_cache.hpp  sfz_parser.hpp  tui.cpp  tui.hpp  tui_base.cpp  tui_base.hpp  tui_core.cpp  tui_core.hpp  tui_view.cpp  tui_view.hpp  ui_commands.hpp
src/deprecated/: tui.cpp  tui.hpp
